098_bst_map/grade.txt
Grading at 11/17/2022:03:36:24.030532
For commit ID 8dd75be6c17a397572ba1c1165423e1cb2f86072
Grading at Wed Nov 16 10:36:22 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = int; V = int]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = int; V = Tester]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = Tester; V = int]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In member function ‘BstMap<K, V>::Node* BstMap<K, V>::helper(BstMap<K, V>::Node*, const K&) [with K = Tester; V = Tester]’:
bstmap.h:132:3: error: control reaches end of non-void function [-Werror=return-type]
  132 |   }
      |   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
